# RentCar

./: .dockerignore  .env.example  .env.prod  .flake8  .gitignore  Dockerfile  Makefile  TODO  docker-compose.yaml  entrypoint.sh  pyproject.toml  translations_helper.py
apps/: admin.py  filters.py  forms.py  paginations.py  permissions.py  serializers.py  urls.py  utils.py  views.py
apps/admin/: __init__.py  admin.py  base_admin.py
apps/fixtures/: carbrand.json  carcategory.json  carcolor.json  carfeature.json  carprice.json  cars.json  feature.json
apps/migrations/: 0001_initial.py  0002_rename_cartype_carcategory_rename_type_car_category.py
apps/models/: __init__.py  base.py  car.py  cars.py  managers.py  news.py  rentals.py  users.py
apps/serializers/: __init__.py  auth.py  cars.py  news.py  rentals.py  user.py
env/: .env.example
locale/en/LC_MESSAGES/: django.po
locale/uz/LC_MESSAGES/: django.po
root/: settings.py  urls.py
